# Flux

./: .gitignore  CREDITS.md  Cargo.toml  README.md  makefile
data/maps/: demo.flm  demo.flux  dj taka-quaver_idk.flm  m1dy-kamikazi-bartek.flux  pyrule-dashie-my bad.flux  pyrule-zee-hate.flux
docs/: flux map(.flux).md  flux map(flm).md
flux-downloads/: ss_archive_-45_-_exile.sspm
flux-map/: Cargo.toml
flux-map/example/: UnderConstruxion.txt  construxion.txt  example.txt  pixenity_andrew_haung_-_grains_of_sand_nerfed_ver.txt  pyrule_dashie_-_my_bad.txt  pyrule_zee_-_hate.txt  ss_archive_kanon_wakeshima_-_tsukinami__sped_up_ver__.txt  vmapimp_cradles.txt
flux-map/src/: lib.rs  tests.rs
flux-map/src/convert/: fluxlegacy.rs  mod.rs  sspm.rs  sspmv1.rs  sspmv2.rs
map-creator/: Cargo.toml
map-creator/example/: slavik.txt
map-creator/src/: lib.rs  main.rs
map-creator/src/convert/: fluxlegacy.rs  mod.rs  sspm.rs  sspmv1.rs
map-downloader/: Cargo.toml
map-downloader/src/: main.rs  mapdata.rs
src/: cursor.rs  game.rs  main.c  main.rs  maploader.rs
src/core/: config.rs  constants.rs  game.rs  maploader.rs  mod.rs  timer.rs
src/game/: game.c  game.h
src/game/hud/border/: border.c  border.h
src/loaders/: map.c  map.h
src/logger/: logger.c  logger.h
src/managers/: audio_manager.rs  mod.rs  notes_manager.rs  stats_manager.rs  time_manager.rs
src/sets/: cursorset.rs  hitset.rs  mod.rs  noteset.rs
src/ui/: hud.rs  map_menu.rs  mod.rs  settings.rs
