[package]
name = "flux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
strip = true
debug = false
panic = "abort"

[dependencies]
nannou = "0.18.1"
nannou_egui = "0.5.0"
kira = "0.7.3"
[workspace]
members = [
    "map-creator",
    "map-downloader"
]