[package]
name = "flux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
strip = true
debug = false
panic = "abort"

[dependencies]
nannou = "0.18.1"
nannou_egui = "0.5.0"
kira = "0.7.3"
log = "0.4.17"
env_logger = "0.10.0"
log-panics = "2.1.0"
log4rs = "1.2.0"
discord-rich-presence = "0.2.3"
flux-map = { path = "./flux-map" }
[workspace]
members = [
    "flux-map",
    "map-downloader"
]